feat: add global exception handler and finalize OpenWeatherService validation
- Implemented GlobalExceptionHandler for external API responses: 400, 404, 500
- Logged selected exceptions without exposing them to users
- Completed validation of external API responses
- Threw appropriate custom exceptions in OpenWeatherService